[tool.poetry]
name = "pyxmv"
version = "0.2.0"
description = "(Unofficial) Python interface to nuXmv"
authors = ["Luca Di Stefano <luca.di.stefano@tuwien.ac.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pexpect = "^4.9.0"
typer-slim = "^0.12.4"
rich = {version = "^13.7.1", optional = true}
msgspec = "^0.18.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyxmv = "pyxmv.pyxmv:app"

[tool.poetry.extras]
full = ["rich"]
